--- a/inloggen.html
+++ b/inloggen.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>HTML Forms</h2>
+<h2>Inlogpagina</h2>
 
 <form action="">
   <label for="fname">First name:</label><br>
@@ -12,7 +12,8 @@
   <input type="submit" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p></p>
 
 </body>
 </html>
+
