--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Opdracht Git</title>
+<style type="text/css">
+	.btn {
+	  text-decoration: none;
+	  padding: 0.5rem;
+	  border: 1px solid #333333;
+	}
+
+</style>
 </head>
 <body>
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-
+    <a class="btn" href="inloggen.html">
+      Inloggen
+    </a>
 </body>
 </html>
+
+
 
